--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,14 @@ coveralls: true
 language: julia
 julia:
   - 1.5
-  - nightly
 
 after_success:
   # push coverage results to Coveralls
   - julia -e 'import Pkg; Pkg.add("Coverage"); cd(Pkg.dir("Solaris")); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
-  #- julia -e 'import Pkg; Pkg.add("Coverage"); cd(Pkg.dir("Kinetic")); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia -e 'import Pkg; Pkg.add("Coverage"); cd(Pkg.dir("Solaris")); using Coverage; Codecov.submit(Codecov.process_folder())'
 
 jobs:
   allow_failures:
-    - julia: nightly
   fast_finish: true
   include:
