--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,21 @@
 
 codecov: true
 coveralls: true
+
 language: julia
+os:
+  - linux
 julia:
   - 1.5
+
+matrix:
+  fast_finish: true
+
+notifications:
+  email: false
 
 after_success:
   # push coverage results to Coveralls
   - julia -e 'import Pkg; Pkg.add("Coverage"); cd(Pkg.dir("Solaris")); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
   - julia -e 'import Pkg; Pkg.add("Coverage"); cd(Pkg.dir("Solaris")); using Coverage; Codecov.submit(Codecov.process_folder())'
-
-jobs:
-  allow_failures:
-  fast_finish: true
-  include:
