--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ Tracker = "9f7883ad-71c0-57eb-9f7f-b5c9e6d3789c"
 
 [compat]
 DiffEqFlux = "^1"
-Flux = "0.11"
+Flux = "0.11, 0.12"
 Optim = "^1"
 Plots = "^1"
 Tracker = "0.2"
