--- a/Project.toml
+++ b/Project.toml
@@ -4,17 +4,37 @@ authors = ["Tianbai Xiao <tianbaixiao@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DiffEqFlux = "aae7a2af-3d4f-5e19-a356-7da93b79d9d0"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Tracker = "9f7883ad-71c0-57eb-9f7f-b5c9e6d3789c"
 
 [compat]
+BSON = "0.3"
+CSV = "0.8"
+CUDA = "^2"
+DataFrames = "^1"
 DiffEqFlux = "^1"
-Flux = "0.11, 0.12"
+Flux = "0.12"
+JLD2 = "0.4"
 Optim = "^1"
 Plots = "^1"
+PyCall = "^1"
 Tracker = "0.2"
 julia = "^1"
+
+[extras]
+Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+build = ["Conda"]
+test = ["Test"]
