--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,8 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.5'
-          - 'nightly'
+          - '1.6'
+#          - 'nightly'
         os:
           - ubuntu-latest
 #          - macOS-latest
