--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,7 @@ PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Tracker = "9f7883ad-71c0-57eb-9f7f-b5c9e6d3789c"
 
 [compat]
-CSV = "0.8, 0.9"
+CSV = "0.8, 0.9, 0.10"
 CUDA = "^3"
 DataFrames = "^1"
 DiffEqFlux = "^1"
