--- a/Project.toml
+++ b/Project.toml
@@ -20,7 +20,7 @@ CSV = "0.8, 0.9, 0.10"
 CUDA = "^3"
 DataFrames = "^1"
 DiffEqFlux = "^1"
-Flux = "0.12"
+Flux = "0.12, 0.13"
 JLD2 = "0.4"
 Optim = "^1"
 Plots = "^1"
