--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DiffEqFlux = "aae7a2af-3d4f-5e19-a356-7da93b79d9d0"
+DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
@@ -16,11 +17,11 @@ PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Tracker = "9f7883ad-71c0-57eb-9f7f-b5c9e6d3789c"
 
 [compat]
-CSV = "0.8, 0.9"
+CSV = "0.8, 0.9, 0.10"
 CUDA = "^3"
 DataFrames = "^1"
 DiffEqFlux = "^1"
-Flux = "0.12"
+Flux = "0.12, 0.13"
 JLD2 = "0.4"
 Optim = "^1"
 Plots = "^1"
