--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ CSV = "0.8, 0.9, 0.10"
 CUDA = "^3"
 DataFrames = "^1"
 DiffEqFlux = "^1"
+DocStringExtensions = "0.8, 0.9"
 Flux = "0.12, 0.13"
 JLD2 = "0.4"
 Optim = "^1"
