--- a/Project.toml
+++ b/Project.toml
@@ -10,11 +10,14 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DiffEqFlux = "aae7a2af-3d4f-5e19-a356-7da93b79d9d0"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Tracker = "9f7883ad-71c0-57eb-9f7f-b5c9e6d3789c"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 CSV = "0.8, 0.9, 0.10"
@@ -22,10 +25,12 @@ CUDA = "^3"
 DataFrames = "^1"
 DiffEqFlux = "^1"
 DocStringExtensions = "0.8, 0.9"
-Flux = "0.12, 0.13"
+Flux = "0.13"
+ForwardDiff = "0.10"
 JLD2 = "0.4"
+Lux = "0.4"
 Optim = "^1"
-Plots = "^1"
+Optimization = "^3"
 PyCall = "^1"
 Tracker = "0.2"
 julia = "^1"
