--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
+OptimizationPolyalgorithms = "500b13db-7e66-49ce-bda4-eed966be6282"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Tracker = "9f7883ad-71c0-57eb-9f7f-b5c9e6d3789c"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
@@ -31,6 +32,7 @@ JLD2 = "0.4"
 Lux = "0.4"
 Optim = "^1"
 Optimization = "^3"
+OptimizationPolyalgorithms = "0.1"
 PyCall = "^1"
 Tracker = "0.2"
 Zygote = "0.6"
