--- a/Project.toml
+++ b/Project.toml
@@ -7,24 +7,27 @@ version = "0.2.4"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-DiffEqFlux = "aae7a2af-3d4f-5e19-a356-7da93b79d9d0"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
+OptimizationFlux = "253f991c-a7b2-45f8-8852-8b9a9df78a86"
+OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
+OptimizationOptimisers = "42dfb2eb-d2b4-4451-abcd-913932933ac1"
 OptimizationPolyalgorithms = "500b13db-7e66-49ce-bda4-eed966be6282"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Tracker = "9f7883ad-71c0-57eb-9f7f-b5c9e6d3789c"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+ZygoteRules = "700de1a5-db45-46bc-99cf-38207098b444"
 
 [compat]
 CSV = "0.8, 0.9, 0.10"
 CUDA = "^3"
 DataFrames = "^1"
-DiffEqFlux = "^1"
 DocStringExtensions = "0.8, 0.9"
 Flux = "0.13"
 ForwardDiff = "0.10"
@@ -32,10 +35,14 @@ JLD2 = "0.4"
 Lux = "0.4"
 Optim = "^1"
 Optimization = "^3"
+OptimizationFlux = "0.1"
+OptimizationOptimJL = "0.1"
+OptimizationOptimisers = "0.1"
 OptimizationPolyalgorithms = "0.1"
 PyCall = "^1"
 Tracker = "0.2"
 Zygote = "0.6"
+ZygoteRules = "0.2"
 julia = "^1"
 
 [extras]
