--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationFlux = "253f991c-a7b2-45f8-8852-8b9a9df78a86"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
 OptimizationPolyalgorithms = "500b13db-7e66-49ce-bda4-eed966be6282"
+ProgressLogging = "33c8b6b6-d38a-422a-b730-caa89a2f386c"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Tracker = "9f7883ad-71c0-57eb-9f7f-b5c9e6d3789c"
@@ -42,6 +43,7 @@ Optimization = "^3"
 OptimizationFlux = "0.1"
 OptimizationOptimJL = "0.1"
 OptimizationPolyalgorithms = "0.1"
+ProgressLogging = "0.1"
 PyCall = "^1"
 Tracker = "0.2"
 Zygote = "0.6"
