--- a/Project.toml
+++ b/Project.toml
@@ -33,7 +33,7 @@ CUDA = "^3, ^4"
 ComponentArrays = "0.13, 0.14"
 DataFrames = "^1"
 DocStringExtensions = "0.8, 0.9"
-Flux = "0.13"
+Flux = "0.13, 0.14"
 ForwardDiff = "0.10"
 IterTools = "^1"
 JLD2 = "0.4"
