CompatHelper: bump compat for Lux to 0.5, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -37,7 +37,7 @@ Flux = "0.13, 0.14"
 ForwardDiff = "0.10"
 IterTools = "^1"
 JLD2 = "0.4"
-Lux = "0.4"
+Lux = "0.4, 0.5"
 Optim = "^1"
 Optimization = "^3"
 OptimizationFlux = "0.1"
