--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,7 @@ ZygoteRules = "700de1a5-db45-46bc-99cf-38207098b444"
 [compat]
 CSV = "0.8, 0.9, 0.10"
 CUDA = "^3, ^4"
-ComponentArrays = "0.13, 0.14"
+ComponentArrays = "0.13, 0.14, 0.15"
 DataFrames = "^1"
 DocStringExtensions = "0.8, 0.9"
 Flux = "0.13, 0.14"
