--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Solaris"
 uuid = "c31bc6c7-79d6-424e-a85f-5b42ee086500"
 authors = ["Tianbai Xiao <tianbaixiao@gmail.com>"]
-version = "0.2.8"
+version = "0.2.9"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
@@ -29,7 +29,7 @@ ZygoteRules = "700de1a5-db45-46bc-99cf-38207098b444"
 
 [compat]
 CSV = "0.8, 0.9, 0.10"
-CUDA = "^3, ^4, 5"
+CUDA = "^3, ^4, ^5"
 ComponentArrays = "0.13, 0.14, 0.15"
 DataFrames = "^1"
 DocStringExtensions = "0.8, 0.9"
