Add compat for stdlibs

--- a/Project.toml
+++ b/Project.toml
@@ -37,6 +37,7 @@ Flux = "0.13, 0.14"
 ForwardDiff = "0.10"
 IterTools = "^1"
 JLD2 = "0.4"
+LinearAlgebra = "<0.0.1, 1"
 Lux = "0.4, 0.5"
 Optim = "^1"
 Optimization = "^3"
@@ -45,6 +46,7 @@ OptimizationOptimJL = "0.1"
 OptimizationPolyalgorithms = "0.1"
 ProgressLogging = "0.1"
 PyCall = "^1"
+Random = "<0.0.1, 1"
 Tracker = "0.2"
 Zygote = "0.6"
 ZygoteRules = "0.2"
