CompatHelper: bump compat for OptimizationFlux to 0.2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -44,7 +44,7 @@ Lux = "0.4, 0.5"
 NNlib = "0.8, 0.9"
 Optim = "^1"
 Optimization = "^3"
-OptimizationFlux = "0.1"
+OptimizationFlux = "0.1, 0.2"
 OptimizationOptimJL = "0.1"
 OptimizationPolyalgorithms = "0.1"
 ProgressLogging = "0.1"
