--- a/Project.toml
+++ b/Project.toml
@@ -46,7 +46,7 @@ Optim = "^1"
 Optimization = "^3"
 OptimizationFlux = "0.1, 0.2"
 OptimizationOptimJL = "0.1, 0.2"
-OptimizationPolyalgorithms = "0.1"
+OptimizationPolyalgorithms = "0.1, 0.2"
 ProgressLogging = "0.1"
 PyCall = "^1"
 Random = "<0.0.1, 1"
