CompatHelper: bump compat for OptimizationOptimJL to 0.3, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -44,7 +44,7 @@ NNlib = "0.8, 0.9"
 Optim = "^1"
 Optimization = "^3"
 OptimizationFlux = "0.1, 0.2"
-OptimizationOptimJL = "0.1, 0.2"
+OptimizationOptimJL = "0.1, 0.2, 0.3"
 OptimizationPolyalgorithms = "0.1, 0.2"
 ProgressLogging = "0.1"
 PyCall = "^1"
