--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Solaris"
 uuid = "c31bc6c7-79d6-424e-a85f-5b42ee086500"
 authors = ["Tianbai Xiao <tianbaixiao@gmail.com>"]
-version = "0.2.13"
+version = "0.2.14"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
@@ -11,6 +11,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+Functors = "d9f16b24-f501-4c13-a1f2-28368ffc5196"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -36,6 +37,7 @@ DataFrames = "^1"
 DocStringExtensions = "0.8, 0.9"
 Flux = "0.13, 0.14"
 ForwardDiff = "0.10"
+Functors = "0.4"
 IterTools = "^1"
 JLD2 = "0.4"
 LinearAlgebra = "<0.0.1, 1"
