CompatHelper: bump compat for Lux to 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -40,7 +40,7 @@ Functors = "0.4"
 IterTools = "^1"
 JLD2 = "0.4"
 LinearAlgebra = "<0.0.1, 1"
-Lux = "0.4, 0.5"
+Lux = "0.4, 0.5, 1"
 NNlib = "0.8, 0.9"
 Optimization = "^3"
 OptimizationFlux = "0.1, 0.2"
