--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Solaris"
 uuid = "c31bc6c7-79d6-424e-a85f-5b42ee086500"
 authors = ["Tianbai Xiao <tianbaixiao@gmail.com>"]
-version = "0.2.15"
+version = "0.2.16"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
@@ -25,13 +25,12 @@ ProgressLogging = "33c8b6b6-d38a-422a-b730-caa89a2f386c"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
-ZygoteRules = "700de1a5-db45-46bc-99cf-38207098b444"
 cuDNN = "02a925ec-e4fe-4b08-9a7e-0d78e3d38ccd"
 
 [compat]
-CSV = "0.8, 0.9, 0.10"
-CUDA = "^3, ^4, ^5"
-ComponentArrays = "0.13, 0.14, 0.15"
+CSV = "0.9, 0.10"
+CUDA = "^4, ^5"
+ComponentArrays = "0.14, 0.15"
 DataFrames = "^1"
 DocStringExtensions = "0.8, 0.9"
 Flux = "0.13, 0.14"
@@ -40,17 +39,16 @@ Functors = "0.4"
 IterTools = "^1"
 JLD2 = "0.4"
 LinearAlgebra = "<0.0.1, 1"
-Lux = "0.4, 0.5, 1"
+Lux = "^1"
 NNlib = "0.8, 0.9"
 Optimization = "^3"
 OptimizationFlux = "0.1, 0.2"
-OptimizationOptimJL = "0.1, 0.2, 0.3"
+OptimizationOptimJL = "0.2, 0.3"
 OptimizationPolyalgorithms = "0.1, 0.2"
 ProgressLogging = "0.1"
 PyCall = "^1"
 Random = "<0.0.1, 1"
 Zygote = "0.6"
-ZygoteRules = "0.2"
 cuDNN = "^1"
 julia = "^1"
 
