CompatHelper: bump compat for JLD2 to 0.5, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -37,7 +37,7 @@ Flux = "0.13, 0.14"
 ForwardDiff = "0.10"
 Functors = "0.4"
 IterTools = "^1"
-JLD2 = "0.4"
+JLD2 = "0.4, 0.5"
 LinearAlgebra = "<0.0.1, 1"
 Lux = "^1"
 NNlib = "0.8, 0.9"
