--- a/Project.toml
+++ b/Project.toml
@@ -43,7 +43,7 @@ Lux = "^1"
 NNlib = "0.8, 0.9"
 Optimization = "^3"
 OptimizationFlux = "0.1, 0.2"
-OptimizationOptimJL = "0.2, 0.3"
+OptimizationOptimJL = "0.2, 0.3, 0.4"
 OptimizationPolyalgorithms = "0.1, 0.2"
 ProgressLogging = "0.1"
 PyCall = "^1"
