--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Solaris"
 uuid = "c31bc6c7-79d6-424e-a85f-5b42ee086500"
 authors = ["Tianbai Xiao <tianbaixiao@gmail.com>"]
-version = "0.2.16"
+version = "0.2.17"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
@@ -41,9 +41,9 @@ JLD2 = "0.4, 0.5"
 LinearAlgebra = "<0.0.1, 1"
 Lux = "^1"
 NNlib = "0.8, 0.9"
-Optimization = "^3, 4"
+Optimization = "^3, ^4"
 OptimizationFlux = "0.1, 0.2"
-OptimizationOptimJL = "0.2, 0.3, 0.4"
+OptimizationOptimJL = "0.3, 0.4"
 OptimizationPolyalgorithms = "0.1, 0.2"
 ProgressLogging = "0.1"
 PyCall = "^1"
