--- a/Project.toml
+++ b/Project.toml
@@ -17,8 +17,8 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
+OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
 OptimizationOptimisers = "42dfb2eb-d2b4-4451-abcd-913932933ac1"
-OptimizationPolyalgorithms = "500b13db-7e66-49ce-bda4-eed966be6282"
 ProgressLogging = "33c8b6b6-d38a-422a-b730-caa89a2f386c"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -38,8 +38,8 @@ LinearAlgebra = "<0.0.1, 1"
 Lux = "^1"
 NNlib = "0.8, 0.9"
 Optimization = "^3, ^4"
+OptimizationOptimJL = "0.3, 0.4"
 OptimizationOptimisers = "0.2, 0.3"
-OptimizationPolyalgorithms = "0.2, 0.3"
 ProgressLogging = "0.1"
 PyCall = "^1"
 Random = "<0.0.1, 1"
