--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         arch:
           - x64
     steps:
-      - run: pip3 install tensorflow --user
+      - run: pip3 install tensorflow --user --break-system-packages
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@v1
         with:
