--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ DataFrames = "^1"
 DocStringExtensions = "0.8, 0.9"
 Flux = "0.13, 0.14"
 ForwardDiff = "0.10"
-Functors = "0.4"
+Functors = "0.4, 0.5"
 IterTools = "^1"
 JLD2 = "0.4, 0.5"
 LinearAlgebra = "<0.0.1, 1"
