Add inference tool for deeponet

--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
+NeuralOperators = "ea5c82af-86e5-48da-8ee1-382d6ad7af4b"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
 OptimizationOptimisers = "42dfb2eb-d2b4-4451-abcd-913932933ac1"
@@ -37,6 +38,7 @@ JLD2 = "0.4, 0.5"
 LinearAlgebra = "<0.0.1, 1"
 Lux = "^1"
 NNlib = "0.8, 0.9"
+NeuralOperators = "0.5"
 Optimization = "^3, ^4"
 OptimizationOptimJL = "0.3, 0.4"
 OptimizationOptimisers = "0.2, 0.3"
