CompatHelper: bump compat for Flux to 0.16, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,7 @@ CSV = "0.9, 0.10"
 ComponentArrays = "0.14, 0.15"
 DataFrames = "^1"
 DocStringExtensions = "0.8, 0.9"
-Flux = "0.14, 0.15"
+Flux = "0.14, 0.15, 0.16"
 ForwardDiff = "0.10"
 Functors = "0.4, 0.5"
 IterTools = "^1"
