CompatHelper: bump compat for ForwardDiff to 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ ComponentArrays = "0.14, 0.15"
 DataFrames = "^1"
 DocStringExtensions = "0.8, 0.9"
 Flux = "0.15, 0.16"
-ForwardDiff = "0.10"
+ForwardDiff = "0.10, 1"
 Functors = "0.4, 0.5"
 IterTools = "^1"
 JLD2 = "0.4, 0.5"
