CompatHelper: bump compat for NeuralOperators to 0.6, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -38,7 +38,7 @@ JLD2 = "0.4, 0.5"
 LinearAlgebra = "<0.0.1, 1"
 Lux = "^1"
 NNlib = "0.8, 0.9"
-NeuralOperators = "0.5"
+NeuralOperators = "0.5, 0.6"
 Optimization = "^3, ^4"
 OptimizationOptimJL = "0.3, 0.4"
 OptimizationOptimisers = "0.2, 0.3"
