--- a/Project.toml
+++ b/Project.toml
@@ -34,7 +34,7 @@ Flux = "0.15, 0.16"
 ForwardDiff = "0.10, 1"
 Functors = "0.4, 0.5"
 IterTools = "^1"
-JLD2 = "0.4, 0.5"
+JLD2 = "0.4, 0.5, 0.6"
 LinearAlgebra = "<0.0.1, 1"
 Lux = "^1"
 NNlib = "0.8, 0.9"
