--- a/Project.toml
+++ b/Project.toml
@@ -39,7 +39,7 @@ LinearAlgebra = "<0.0.1, 1"
 Lux = "^1"
 NNlib = "0.8, 0.9"
 NeuralOperators = "0.5, 0.6"
-Optimization = "^3, ^4, 5"
+Optimization = "^3, ^4, ^5"
 OptimizationOptimJL = "0.3, 0.4"
 OptimizationOptimisers = "0.2, 0.3"
 ProgressLogging = "0.1"
